--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,10 +29,18 @@ jobs:
       - name: make gradle wrapper executable
         if: ${{ runner.os != 'Windows' }}
         run: chmod +x ./gradlew
+      - name: Download Ledger
+        uses: actions/checkout@v2
+        with:
+          repository: 'QuiltServerTools/Ledger'
+          ref: 'master'
+          path: 'ledger'
+      - name: Publish Ledger to mavenlocal
+        run: cd ./ledger && ./gradlew publishToMavenLocal && cd ..
       - name: build
         run: ./gradlew build
       - name: capture build artifacts
-        if: ${{ runner.os == 'Linux' && matrix.java == '16' }} # Only upload artifacts built from latest java on one OS
+        if: ${{ runner.os == 'Linux' && matrix.java == '16' }}
         uses: actions/upload-artifact@v2
         with:
           name: Artifacts
