--- a/build.gradle
+++ b/build.gradle
@@ -34,9 +34,11 @@ dependencies {
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
 	// Yes this has to be capitalised
-	modImplementation "com.github.quiltservertools:ledger:1.2.0"
+	modImplementation "com.github.quiltservertools:Ledger:1.2.5"
 
 	modImplementation "net.fabricmc:fabric-language-kotlin:1.7.0+kotlin.1.6.0"
+
+	implementation(include("com.zaxxer:HikariCP:5.0.1"))
 
 	// H2
 	implementation(include("com.h2database:h2:1.4.200"))
@@ -79,7 +81,13 @@ jar {
 publishing {
 	publications {
 		mavenJava(MavenPublication) {
-			from(components["java"])
+			// add all the jars that should be included when publishing to maven
+			artifact(remapJar) {
+				builtBy remapJar
+			}
+			artifact(sourcesJar) {
+				builtBy remapSourcesJar
+			}
 		}
 	}
 
