--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
-	id 'fabric-loom' version '0.10-SNAPSHOT'
+	id 'fabric-loom' version '1.2.+'
 	id 'maven-publish'
-	id 'org.jetbrains.kotlin.jvm' version "1.6.0"
+	id 'org.jetbrains.kotlin.jvm' version "1.8.22"
 }
 
 sourceCompatibility = JavaVersion.VERSION_17
@@ -34,11 +34,11 @@ dependencies {
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
 	// Yes this has to be capitalised
-	modImplementation "com.github.quiltservertools:Ledger:1.2.5"
+	modImplementation "com.github.quiltservertools:Ledger:1.3.0"
 
-	modImplementation "net.fabricmc:fabric-language-kotlin:1.7.0+kotlin.1.6.0"
+	modImplementation "net.fabricmc:fabric-language-kotlin:1.9.4+kotlin.1.8.21"
 
-	implementation(include("com.zaxxer:HikariCP:5.0.1"))
+	implementation("com.zaxxer:HikariCP:5.0.1")
 
 	// H2
 	implementation(include("com.h2database:h2:1.4.200"))
