--- a/build.gradle
+++ b/build.gradle
@@ -27,21 +27,18 @@ dependencies {
 	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
-	// Fabric API. This is technically optional, but you probably want it anyway.
-	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-
 	// Yes this has to be capitalised
 	modImplementation "com.github.quiltservertools:Ledger:1.3.0+local"
 
 	modImplementation "net.fabricmc:fabric-language-kotlin:1.9.4+kotlin.1.8.21"
 
-	implementation("com.zaxxer:HikariCP:5.0.1")
+	implementation(include("com.zaxxer:HikariCP:5.0.1"))
 
 	// H2
 	implementation(include("com.h2database:h2:2.2.224"))
 
 	// MySQL
-	implementation(include('mysql:mysql-connector-java:8.3.0'))
+	implementation(include('com.mysql:mysql-connector-j:8.3.0'))
 
 	// PostgreSQL
 	implementation(include("org.postgresql:postgresql:42.7.3"))
