--- a/build.gradle
+++ b/build.gradle
@@ -13,12 +13,14 @@ group = project.maven_group
 
 repositories {
 	mavenLocal()
+	mavenCentral()
 	maven {
 		url = "https://maven.nucleoid.xyz"
 	}
 	maven {
 		url = "https://oss.sonatype.org/content/repositories/snapshots"
 	}
+	maven { url 'https://jitpack.io' }
 }
 
 dependencies {
@@ -32,7 +34,12 @@ dependencies {
 
 	modImplementation "net.fabricmc:fabric-language-kotlin:1.9.4+kotlin.1.8.21"
 
+	implementation(include("com.uchuhimo:konf-core:1.1.2"))
+
 	implementation(include("com.zaxxer:HikariCP:5.0.1"))
+
+	// SQLite
+	implementation(include('org.xerial:sqlite-jdbc:3.30.1'))
 
 	// H2
 	implementation(include("com.h2database:h2:2.2.224"))
