--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,26 @@
+import org.jetbrains.kotlin.gradle.dsl.JvmTarget
+import org.jetbrains.kotlin.gradle.dsl.KotlinVersion
+import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
+
 plugins {
-	id 'fabric-loom' version '1.6.+'
+	id 'fabric-loom' version '1.12.7'
 	id 'maven-publish'
-	id 'org.jetbrains.kotlin.jvm' version "1.8.22"
+	id 'org.jetbrains.kotlin.jvm' version "2.2.21"
 }
 
-sourceCompatibility = JavaVersion.VERSION_17
-targetCompatibility = JavaVersion.VERSION_17
+java {
+    sourceCompatibility = JavaVersion.VERSION_17
+    targetCompatibility = JavaVersion.VERSION_17
+}
 
-archivesBaseName = project.archives_base_name
+base {
+    archivesName = project.archives_base_name
+}
 version = project.mod_version
 group = project.maven_group
 
 repositories {
+    mavenCentral()
 	mavenLocal()
 	maven {
 		url = "https://maven.nucleoid.xyz"
@@ -45,6 +54,8 @@ dependencies {
 
 	// PostgreSQL
 	implementation(include("org.postgresql:postgresql:42.7.3"))
+
+    modImplementation("me.lucko:fabric-permissions-api:0.3")
 }
 
 processResources {
@@ -61,6 +72,12 @@ tasks.withType(JavaCompile).configureEach {
 	it.options.release = 17
 }
 
+tasks.withType(KotlinCompile).configureEach {
+    it.compilerOptions.languageVersion = KotlinVersion.KOTLIN_1_8
+    it.compilerOptions.apiVersion = KotlinVersion.KOTLIN_1_8
+    it.compilerOptions.jvmTarget = JvmTarget.JVM_17
+}
+
 java {
 	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
 	// if it is present.
@@ -70,7 +87,7 @@ java {
 
 jar {
 	from("LICENSE") {
-		rename { "${it}_${project.archivesBaseName}"}
+		rename { "${it}_${project.archives_base_name}"}
 	}
 }
 
